# tenet

./: .gitignore  limine.cfg  make_iso.sh  meson.build
.github/workflows/: build.yml
docs/: Doxyfile
docs/source/: conf.py  core.rst  index.rst
docs/source/core/: core.rst
include/boot/: stivale.h
include/lib/core/: stdio.h  string.h
include/tenet/: asm.h  core.h  interrupts.h
kernel/: int.S  interrupts.c  kmain.c  meson.build
ldscripts/: x86_64.ld
lib/: meson.build
lib/core/: meson.build  stdio.c  string.c
tests/compiler/: should_compile.c
toolchain/: clang-x86_64.ini
